# automas_script_maa

./: README.md  pyproject.toml
src/script_maa/: __init__.py  adapter.py  constants.py  options.py  plugin.py  schema.py  template_renderer.py
src/script_maa/maa_task/: AutoProxy.py  ManualReview.py  ScriptConfig.py  __init__.py  manager.py
src/script_maa/maa_task/tools/: UpdateMAA.py  __init__.py  bilibili.py  notify.py
src/script_maa/templates/: MAA_six_star.html  MAA_statistics.html
