[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automas_script_maa"
version = "0.0.1"
description = "MAA 脚本桥接插件"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0"]

[project.entry-points."auto_mas.plugins"]
script_MAA = "script_maa.plugin:Plugin"

[tool.setuptools.packages.find]
where = ["src"]
