[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automas_script_maa"
version = "0.0.5-alpha"
description = "MAA 专项适配"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.10"
dependencies = ["pydantic>=2.0", "auto-mas-plugin-sdk>=5.2.0"]
[project.entry-points."auto_mas.plugins"]
script_MAA = "script_maa.plugin:Plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
script_maa = ["templates/*.html"]
